# cmake_vcpkg

project/: CMakeLists.txt  CMakePresets.json  project.cpp  project.h  start.bat  vcpkg.json
